--- a/Android/app/src/main/res/layout/cita.xml
+++ b/Android/app/src/main/res/layout/cita.xml
@@ -16,55 +16,20 @@
 
         <TextView
             android:id="@+id/txv_cliente_nombre"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_calendario_verde"
             android:fontFamily="@font/roboto"
             android:gravity="center_horizontal"
-            android:text="@string/btn_hora"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/guideline21"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/txv_cliente_nombre2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/roboto"
-            android:gravity="center_horizontal"
-            android:text="HRS"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline21"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edt_hora" />
-
-        <TextView
-            android:id="@+id/txv_cliente_nombre3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="@font/roboto"
-            android:gravity="left"
-            android:text="Fecha: "
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txv_cliente_nombre2" />
 
         <TextView
             android:id="@+id/txv_nombre"
@@ -73,13 +38,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:drawableLeft="@drawable/ic_correo"
+            android:drawableLeft="@drawable/ic_usuario_gris"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="correo"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txv_cliente_nombre"
+            app:layout_constraintEnd_toStartOf="@+id/button5"
+            app:layout_constraintStart_toStartOf="@+id/guideline21"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -88,16 +53,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:drawableLeft="@drawable/ic_telefono"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
             android:text="telefono"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txv_cliente_nombre2"
+            app:layout_constraintStart_toStartOf="@+id/guideline21"
             app:layout_constraintTop_toBottomOf="@+id/txv_nombre" />
 
         <android.support.constraint.Guideline
@@ -105,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.41" />
+            app:layout_constraintGuide_percent="0.3" />
 
         <TextView
             android:id="@+id/edt_fecha"
@@ -118,8 +82,8 @@
             android:text="hora_edt"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline21"
-            app:layout_constraintStart_toEndOf="@+id/txv_cliente_nombre3"
-            app:layout_constraintTop_toBottomOf="@+id/txv_cliente_nombre2" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_hora" />
 
         <TextView
             android:id="@+id/edt_hora"
@@ -132,6 +96,17 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline21"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txv_cliente_nombre" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/ic_eliminar_rojo"
+            android:onClick="btn_eliminar_cita"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
